switched to java 17